# rusty-repo

./: .dockerignore  .prdoc.toml  AGENTS.md  Cargo.toml  Dockerfile  LICENSE  README.md
.github/workflows/: cd.yml  release.yml
docs/: index.md
docs/agent/: index.md
docs/architecture/: overview.md
docs/contributor/: guide.md
docs/getting-started/: overview.md
skills/scaffold/: skill.toml
templates/changelog/: CHANGELOG.md
templates/default/: AGENTS.md  Cargo.toml  README.md  mise.toml
templates/default/.github/workflows/: ci.yml
templates/default/app/: Cargo.toml
templates/default/app/src/: main.rs
templates/prdoc/: .template.prdoc
templates/workspace/: AGENTS.md  Cargo.toml  README.md  rust-toolchain.toml  rustfmt.toml
