[workspace]
resolver = "2"
members = [
    "packages/cli",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"
authors = ["Afsall"]
repository = "https://github.com/afsall/rusty-repo"

[workspace.dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
clap = { version = "4.5", features = ["derive"] }
anyhow = "1.0"