[workspace]
resolver = "2"
members = ["app"]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"
authors = ["{{author}}"]
repository = "https://github.com/{{author}}/{{project_name}}"

[workspace.dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.5", features = ["derive"] }
thiserror = "2.0"
anyhow = "1.0"